<resources>
    <string name="app_name">Asahi Ryoko</string>
    <string name="title_activity_user_login">Asahi Ryoko</string>
    <string name="hello_world">Hello Square World!</string>

    <!--User Login-->
    <string name="UserEmail">Email</string>
    <string name="UserPassword">Password</string>
    <string name="LoginButton">Login</string>
    <string name="RegisterButton">Register</string>

    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="EditNameTitle">Enter your name</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="EnterHere">Enter here</string>


    <!--User Post-->
    <string name="ChoosePhotoButton">Choose Photo</string>
    <string name="UserInputPlaceName">Place name</string>
    <string name="UserInputPlaceDescription">Description</string>
    <string name="UploadButton">Post</string>
    <string-array name="places_array">
        <item>Nature</item>
        <item>Landmarks</item>
        <item>Food</item>
        <item>Market Or Shopping</item>
        <item>Leisure</item>
    </string-array>

    <!--Search Activity-->
    <string name="Search">Search Places Name</string>
    <string name="PlaceName">Place name</string>
    <string name="SearchDescription">Description</string>
</resources>